hs14b09a pit: a lot of tests failed in "-server -Xcomp" on solaris-amd64 using fastdebug bits

XMLWordPrintable

    • b43
    • x86
    • solaris
    • Verified

        A lot of tests failed in "-server -Xcomp" on solaris-amd64 using fastdebug bits.
        The tests mostly fail with java.lang.NullPointerException
        or java.lang.NoClassDefFoundError.

        The tests don't fail with -Xint or -Xmixed, with client compiler, previous jdk7/hs14 builds and don't fail on other platforms.
        Entries for this failure mode from my nightly analysis report:

        New nsk.jvmti.unit failures (from 2008.12.16)
        * nsk/jvmti/unit/ForceEarlyReturn/earlyretlong
        * nsk/jvmti/unit/ForceEarlyReturn/earlyretstr
                earlyretlong failed due to:

                    Falure: wrong value returned: 0

                and earlyretstr failed due to:

                    Expected string: "Expected String"
                    Returned string: "null"

                on Solaris AMD64 Server VM (machine vm-v20z-7). These tests
                have not failed before this nightly when earlyretbase and
                earlyretint failed. See nsk.jvmti entry on 2008.12.09 for more
                details.

        New nsk.jvmti failures (from 2008.12.09)
        * nsk/jvmti/scenarios/hotswap/HS101/hs101t001
        * nsk/jvmti/scenarios/hotswap/HS101/hs101t003
        * nsk/jvmti/scenarios/hotswap/HS101/hs101t004
        * nsk/jvmti/scenarios/hotswap/HS101/hs101t006
                These tests failed due to "ERROR: Wrong number[40]: 5702887,
                expected: 102334155" (for example) on Solaris AMD64 Server VM
                (machine vm-v20z-6). This failure mode matches the following
                bug which was fixed in Mustang-B82:

                    6415119 3/4 REGRESSION: hs101t001, hs101t003, hs101t004,
                                PopSynchronousTest, RedefineCrossStart

                Update: These tests passed in the 2008.12.08 nightly.

                Update: These tests passed in the 2008.12.10 nightly, but
                    failed again in the 2008.12.11 nightly. 12.08 and 12.10
                    nightlies used -XX:+UseCompressedOops and the 12.09 and
                    12.11 nightlies used -XX:-UseCompressedOops. The last
                    -XX:-UseCompressedOops nightly where these tests passed
                    was on 2008.12.06. I merged with jdk7/hotspot/hotspot on
                    2008.12.08 and picked up 2008-12-05-201045.ls199021.hotspot
                    and 2008-12-05-234952.et151817.hotspot. Erik's job was just
                    tags and hotspot_version changes so this might have come
                    from Lev's push. I checked the RT_Baseline results for
                    2008.12.06 and the failures did not reproduce there, but
                    RT_Baseline is run with -Xmixed instead of -Xcomp.

        New nsk.jvmti.unit failures (from 2008.12.09)
        * nsk/jvmti/unit/ForceEarlyReturn/earlyretbase
        * nsk/jvmti/unit/ForceEarlyReturn/earlyretint
                earlyretbase failed due to:

                    Returned result: 0
                    Wrong result returned

                and earlyretint failed due to:

                    Falure: wrong value returned: 0

                on Solaris AMD64 Server VM (machine vm-v20z-9).

                Update: These tests passed in the 2008.12.08 nightly.

                Update: See previous entry for more details.

              Assignee:
              Poonam Bajaj Parhar
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: