6786340: hs14b09a pit: a lot of tests failed in "-server -Xcomp" on solaris-amd64 using fastdebug bits

Fixes the nsk-jdi PIT failures introduced by fix for 6739363

Reviewed-by: kvn, coleenp